Fix overflow in Image to QR.

--- a/src/app/qr-form/qr-form.component.css
+++ b/src/app/qr-form/qr-form.component.css
@@ -6,7 +6,7 @@
 	gap: 20px 0;
 
 	--qr-form-padding: 20px;
-	height: calc(100vh - var(--mat-toolbar-standard-height) - 2 * var(--qr-form-padding));
+	min-height: calc(100vh - var(--mat-toolbar-standard-height) - 2 * var(--qr-form-padding));
 	padding: var(--qr-form-padding) 0;
 }
 
